# RVO2

./: .bazelignore  .bazelrc  .bazelversion.license  .buildifier.json  .buildifier.json.license  .clang-format  .clang-tidy  .cppcheck-suppressions.xml  .cppcheck.xml  .deepsource.toml  .dockerignore  .editorconfig  .gersemirc  .gitattributes  .gitignore  .hadolint.yaml  .iwyu_mappings.imp  .pre-commit-config.yaml  .secrets.baseline  .secrets.baseline.license  .travis.yml  .yamllint.yaml  .zenodo.json  .zenodo.json.license  BUILD  BUILD.bazel  Brewfile  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  COPYING  CPPLINT.cfg  CTestConfig.cmake  Dockerfile  MODULE.bazel  QUALITY_DECLARATION.md  README.md  RVO.pc.in  RVOConfig.cmake.in  (+13 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json  devcontainer.json.license
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  SUPPORT.md  actionlint-matcher.json  actionlint-matcher.json.license  buildifier-matcher.json  buildifier-matcher.json.license  clang-tidy-matcher.json  clang-tidy-matcher.json.license  codespell-matcher.json  codespell-matcher.json.license  cppcheck-to-sarif.py  cpplint-matcher.json  cpplint-matcher.json.license  dependabot.yml  detect-secrets-matcher.json  detect-secrets-matcher.json.license  hadolint-matcher.json  hadolint-matcher.json.license  lizard-matcher.json  lizard-matcher.json.license  markdownlint-matcher.json  markdownlint-matcher.json.license
.github/workflows/: actionlint.yml  bazel.yml  buildifier.yml  check-jsonschema.yml  ci.yml  clang-format.yml  clang-tidy.yml  cmake.yml  codeql.yml  codespell.yml  coverage.yml  cppcheck.yml  cpplint.yml  detect-secrets.yml  docker.yml  gersemi.yml  hadolint.yml  iwyu.yml  lizard.yml  markdownlint.yml  meson.yml  muon.yml  reuse.yml  ruff.yml  sanitizer.yml  valgrind.yml  validate-cff.yml  yamllint.yml
.reuse/: dep5
LICENSES/: Apache-2.0.txt  CC-BY-4.0.txt  CC-BY-SA-4.0.txt
cmake/modules/: CheckCXXLinkerFlag.cmake
conditions/: BUILD.bazel
doc/: CMakeLists.txt  Doxyfile  footer.html  footer.html.license  header.html  header.html.license  stylesheet.css
examples/: BUILD  BUILD.bazel  Blocks.cc  Blocks.cpp  CMakeLists.txt  Circle.cc  Circle.cpp  Roadmap.cc  Roadmap.cpp  meson.build
src/: Agent.cc  Agent.cpp  Agent.h  BUILD  BUILD.bazel  CMakeLists.txt  Definitions.cc  Definitions.cpp  Definitions.h  Export.cc  Export.cpp  Export.h  KdTree.cc  KdTree.cpp  KdTree.h  Line.cc  Line.h  Obstacle.cc  Obstacle.cpp  Obstacle.h  RVO.h  RVOSimulator.cc  RVOSimulator.cpp  RVOSimulator.h  Vector2.cc  Vector2.h  meson.build
