# -*- mode: bazel; -*-
# vi: set ft=bazel:

#
# MODULE.bazel
# RVO2 Library
#
# SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Please send all bug reports to <geom@cs.unc.edu>.
#
# The authors may be contacted via:
#
# Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
# Dept. of Computer Science
# 201 S. Columbia St.
# Frederick P. Brooks, Jr. Computer Science Bldg.
# Chapel Hill, N.C. 27599-3175
# United States of America
#
# <https://gamma.cs.unc.edu/RVO2/>
#

module(
    name = "rvo",
    version = "2.0.3",
)

bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.1", dev_dependency = True)

hermetic_cc_toolchain = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
    dev_dependency = True,
)
use_repo(hermetic_cc_toolchain, "zig_sdk")

bazel_dep(name = "toolchains_msvc", version = "0.1.0", dev_dependency = True)
archive_override(
    module_name = "toolchains_msvc",
    integrity = "sha256-8/bQk6rKsN2IgORv51oIiuR/A2vHKVPLLmnP3lPRl+g=",
    strip_prefix = "toolchains_msvc-e5b8d113480ce43970bdb034c939eb19a721b244",
    urls = ["https://github.com/Dragnalith/toolchains_msvc/archive/e5b8d113480ce43970bdb034c939eb19a721b244.tar.gz"],
)

msvc = use_extension("@toolchains_msvc//:extensions.bzl", "msvc", dev_dependency = True)
use_repo(msvc, "msvc_toolchain")

register_toolchains(
    "@msvc_toolchain//:all",
    "@zig_sdk//toolchain:all",
    dev_dependency = True,
)

bazel_dep(name = "rules_cc", version = "0.2.18")

cc_configure = use_extension(
    "@rules_cc//cc:extensions.bzl",
    "cc_configure_extension",
    dev_dependency = True,
)
use_repo(cc_configure, "local_config_cc", "local_config_cc_toolchains")

bazel_dep(name = "rules_license", version = "1.0.0")

bazel_dep(name = "rules_python", version = "2.0.0", dev_dependency = True)
archive_override(
    module_name = "rules_python",
    integrity = "sha256-lGFz8t9tudX1DqO5qf7/f3zE3mlT6oz0E7sJYtbIfj8=",
    strip_prefix = "rules_python-ee7c54bf31a532ad9af34ac9a08bc70f6e365719",
    urls = ["https://github.com/bazel-contrib/rules_python/archive/ee7c54bf31a532ad9af34ac9a08bc70f6e365719.tar.gz"],
)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
)
python.toolchain(
    is_default = True,
    python_version = "3.14.4",
)
use_repo(python, "python_3_14_4")

bazel_dep(name = "platforms", version = "1.1.0", dev_dependency = True)
bazel_dep(name = "rules_pkg", version = "1.2.0", dev_dependency = True)
